Preparing a possible release of Jackpot 12.2.